# vfriend

./: .gitignore  404.html  AndroidManifest.xml  CNAME  Cargo.toml  README.md  VIT_Friend-8654f8fec7f6a744.js  index.html  index.txt  package.json  pnpm-lock.yaml  sitemap.xml  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml  release.yaml
.well-known/: assetlinks.json
README/: README.md
_next/static/chunks/: 0b0944fb-dfd150d649b15d65.js  174.004e36c6c1a5829d.js  379-3b7a18a80376536e.js  766-dd3d1ef6f7bb99bc.js  91.39020ee746fc4f96.js  main-78b29d5865a7ddf5.js  main-app-5ed68ac91d3a1aa5.js  webpack-14780df930b8b281.js
_next/static/chunks/app/: layout-6b9d76d448df85c8.js  page-703be45379c0b75b.js
_next/static/chunks/app/_not-found/: page-76acb13de9aa6bac.js
_next/static/chunks/pages/: _app-390ca222d17b361c.js  _error-a47698de43e7b056.js
_next/static/css/: 7186149a3ecec6a5.css
_next/static/u7xZLl7DJy8Pe0WUR3tdK/: _buildManifest.js
android/: AndroidManifest.xml  build.gradle.kts
android/values/: colors.xml  strings.xml  themes.xml
android/values-night/: themes.xml
assets/: index-Bivlbtsj.css  index-DcW2L1oE.js  sw.js
src/: App.css  App.tsx  app.tsx  index.css  main.rs  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  distances.rs  lib.rs  main.rs  newcommands.rs  newercommands.rs  p2p.rs  parseHTML.rs  parse_html.rs  scheduling_conflict.rs
src/about/: page.tsx  text.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/assets/: loading_wifi.lottie
src/components/: 3DCard.tsx  Close.tsx  Cubes.tsx  CustomCursor.tsx  FlowMenu.tsx  Footer.tsx  FriendPage.tsx  GradientText.tsx  Header.tsx  HeroElements.jsx  HoverLink.tsx  MagneticButton.jsx  MagneticButton.tsx  Navbar.tsx  PixelChanger.tsx  Profile.tsx  ScheduleGrid.tsx  ShinyText.tsx  TextPressure.tsx  friendCard.tsx
src/components/calendar/: Calendar.tsx
src/components/friends/: FriendCardFriend.tsx  FriendPage.tsx  FriendQR.tsx  Friends.tsx  P2P.tsx  QRCodeGenerator.tsx  QRGiver.tsx  QRScanner.tsx  ShareLink.tsx  addFriend.tsx  deepLinkAccept.tsx  test1.json  test2.json  test3.json
src/components/friends/FriendAddTypes/: Access.tsx
src/components/home/: Home.tsx  PersonPage.tsx  friendCard.tsx  friendCardHome.tsx  newfriendCardHome.tsx  test.tsx
src/components/mainpage/: Chat.tsx  CubePage.tsx  DownloadApp.tsx  NoTTs.tsx  RotatingSquares.tsx  ScheduleList.tsx  ThreeDeeCard.tsx
src/components/profile/: Profile.tsx  ScheduleGrid.tsx  timetable_minimal.json
src/components/settings/: Settings.tsx
src/components/welcome/: FileInput.tsx  GetStarted.tsx  OnboardingForm.tsx  welcomePage.tsx
src/components/welcome/onboarding/: HobbiesStep.tsx  NameStep.tsx  SemesterStep.tsx  TaglineStep.tsx  TimetableStep.tsx
src/hooks/: timetablenewBitmap.ts  useDeepLink.tsx  useFriendData.ts  useOnboardingStatus.ts  useShareUserProfile.ts  useTimeTableQueries.ts  useUserProfile.ts  useUserQueries.tsx  useUserTimetable.ts
src/lib/: queryClient.ts  utils.ts
src/phone/: ScheduleList.tsx
src/privacy/: PrivacyPage.tsx  page.tsx
src/store/: friendStore.ts  newtimeTableStore.ts  timeTableStore.ts  useAddFriendStore.ts  useNavStore.ts  useTimeTableStore.ts
src/tutorial/: Tutorialtext.tsx  page.tsx
src/types/: friendCard.ts  timeTable.ts
src/utils/: compressor.ts  conflitCheck.js  inputHelper.ts  invokeFunctions.ts  timetableBitmap.ts  timetableHelper.ts
