[package]
name = "vitfriend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vitfriend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22.1"
soup = "0.5.1"
chrono = "0.4.41"
tauri-plugin-store = "2"
tauri-plugin-sharing = { git = "https://github.com/inkibra/tauri-plugins", package="tauri-plugin-sharing" }
tokio = { version = "1.45.1", features = ["full"] }
iroh = "0.34.0"
anyhow = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# [patch.crates-io]
# base64ct = { git = "https://github.com/RustCrypto/formats", tag = "base64ct-v1.6.0" }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
